tests/snapshots/snapshot__excessive_permissions-12.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"excessive-permissions/reusable-workflow-other-triggers.yml\")).run()?"
snapshot_kind: text
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:1:1
   |
 1 | / name: reusable-workflow-other-triggers
 2 | |
...  |
20 | |     # responsible for setting permissions
21 | |     uses: ./.github/workflows/fake.yml
   | |_______________________________________- default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:11:3
   |
11 | /   job1:
12 | |     # regular job-level finding, since we can be triggered by
...  |
15 | |     steps:
16 | |       - run: echo hello
   | |                       -
   | |_______________________|
   |                         this job
   |                         default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:18:3
   |
18 | /   job2:
19 | |     # normal permissions finding here, since callers are always
20 | |     # responsible for setting permissions
21 | |     uses: ./.github/workflows/fake.yml
   | |                                       -
   | |_______________________________________|
   |                                         this job
   |                                         default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

3 findings: 0 unknown, 0 informational, 0 low, 3 medium, 0 high
