tests/snapshots/snapshot__excessive_permissions-5.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"excessive-permissions/workflow-write-all.yml\")).run()?"
snapshot_kind: text
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:3:1
  |
3 | permissions: write-all
  | ^^^^^^^^^^^^^^^^^^^^^^ uses write-all permissions
  |
  = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
