tests/snapshots/snapshot__excessive_permissions-6.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"excessive-permissions/workflow-empty-perms.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
